<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="@dimen/pages_right_margin"
        android:paddingLeft="@dimen/pages_left_margin"
        android:paddingRight="@dimen/pages_right_margin"
        android:paddingStart="@dimen/pages_left_margin"
        android:paddingTop="@dimen/pages_top_to_top_margin"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/signup_et_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="@dimen/pages_top_to_top_margin"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/signup_tv_username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/signup_et_fullname"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="@dimen/pages_top_to_top_margin"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/signup_tv_fullname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/signup_et_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="@dimen/pages_top_to_top_margin"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/signup_tv_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/signup_et_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="@dimen/pages_top_to_top_margin"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/signup_tv_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/signup_et_repeat_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="@dimen/pages_top_to_top_margin"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/signup_tv_repeat_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/signup_b_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pages_top_to_top_margin"
            android:background="@drawable/rounded_buttons"
            android:text="@string/signup_tv_signup" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/first_page_spacing" />

    </LinearLayout>
</ScrollView>
