<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="@dimen/pages_right_margin"
    android:paddingLeft="@dimen/pages_left_margin"
    android:paddingRight="@dimen/pages_right_margin"
    android:paddingStart="@dimen/pages_left_margin"
    android:orientation="vertical"
    tools:context="com.rahnemacollege.pixel.AccountEditActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pages_top_to_top_margin"
        android:text="@string/account_username"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="@dimen/pages_top_to_top_margin"
        android:background="@drawable/rounded_edittext"
        android:inputType="text"
        android:layoutDirection="ltr"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pages_top_to_top_margin"
        android:text="@string/account_email"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="@dimen/pages_top_to_top_margin"
        android:background="@drawable/rounded_edittext"
        android:inputType="text"
        android:layoutDirection="ltr"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pages_top_to_top_margin"
        android:text="@string/account_password_change"
        android:textSize="@dimen/account_header_size"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pages_top_to_top_margin"
        android:text="@string/account_current_password"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="@dimen/pages_top_to_top_margin"
        android:background="@drawable/rounded_edittext"
        android:inputType="text"
        android:layoutDirection="ltr"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pages_top_to_top_margin"
        android:text="@string/account_new_password"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="@dimen/pages_top_to_top_margin"
        android:background="@drawable/rounded_edittext"
        android:inputType="text"
        android:layoutDirection="ltr"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pages_top_to_top_margin"
        android:background="@drawable/rounded_buttons"
        android:textColor="@color/first_page_button_foreground"
        android:text="@string/account_update"/>

</LinearLayout>
