<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingStart="@dimen/pages_left_margin"
    android:paddingEnd="@dimen/pages_right_margin"
    android:paddingLeft="@dimen/pages_left_margin"
    android:paddingRight="@dimen/pages_right_margin"
    tools:context="com.rahnemacollege.pixel.LoginActivity">

    <TextView
        android:id="@+id/login_tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/login_tv_username" />

    <EditText
        android:id="@+id/login_et_username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="@dimen/pages_top_to_top_margin"
        android:background="@drawable/rounded_edittext"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/login_tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pages_top_to_top_margin"
        android:text="@string/login_tv_password" />

    <EditText
        android:id="@+id/login_et_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="@dimen/pages_top_to_top_margin"
        android:background="@drawable/rounded_edittext"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/login_tv_forgetpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/login_tv_forgetpassword"
        android:textAlignment="center" />

    <Button
        android:id="@+id/login_b_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_buttons"
        android:text="@string/login_b_login" />
</LinearLayout>
