<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context="com.rahnemacollege.pixel.ForgetPasswordFragment">


    <TextView
        android:id="@+id/forget_password_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/pages_left_margin"
        android:layout_marginRight="@dimen/pages_right_margin"
        android:text="@string/forget_password_tv"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/forget_password_et_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginLeft="@dimen/pages_left_margin"
        android:layout_marginRight="@dimen/pages_right_margin"
        android:layout_marginTop="@dimen/pages_top_to_top_margin"
        android:background="@drawable/rounded_edittext"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/edit_text_left_padding"
        android:paddingRight="@dimen/edit_text_right_padding" />

    <Button
        android:id="@+id/forget_password_b_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/pages_left_margin"
        android:layout_marginRight="@dimen/pages_right_margin"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_buttons"
        android:text="@string/forget_password_send" />

    <LinearLayout
        android:id="@+id/forget_password_container_outer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/pages_right_margin"
        android:layout_marginStart="@dimen/pages_left_margin"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/forget_password_container_inner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/forget_password_et_code"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginTop="@dimen/pages_top_to_top_margin"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/forget_password_code"
                android:inputType="number"
                android:paddingLeft="@dimen/edit_text_left_padding"
                android:paddingRight="@dimen/edit_text_right_padding" />

            <EditText
                android:id="@+id/forget_password_et_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginTop="@dimen/pages_top_to_top_margin"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/forget_password_password"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/edit_text_left_padding"
                android:paddingRight="@dimen/edit_text_right_padding" />

            <EditText
                android:id="@+id/forget_password_et_password_repeat"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginTop="@dimen/pages_top_to_top_margin"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/forget_password_password_repeat"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/edit_text_left_padding"
                android:paddingRight="@dimen/edit_text_right_padding" />

            <Button
                android:id="@+id/forget_password_b_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pages_top_to_top_margin"
                android:background="@drawable/rounded_buttons"
                android:text="@string/forget_password_reset" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>