<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_f"
    android:orientation="vertical"
    tools:context="com.rahnemacollege.pixel.FirstPageActivity">

    <ProgressBar
        android:id="@+id/reset_password_page_loading"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:background="@color/light_f"
        android:visibility="invisible"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingEnd="@dimen/pages_right_margin"
            android:paddingStart="@dimen/pages_left_margin"
            tools:context="com.rahnemacollege.pixel.ForgetPasswordFragment">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pages_top_to_top_margin"
                android:text="@string/forget_password_tv" />

            <EditText
                android:id="@+id/forget_password_et_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginTop="@dimen/pages_top_to_top_margin"
                android:background="@drawable/rounded_edittext"
                android:inputType="textEmailAddress"
                android:layoutDirection="ltr" />

            <Button
                android:id="@+id/forget_password_b_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pages_top_to_top_margin"
                android:background="@drawable/rounded_buttons"
                android:text="@string/forget_password_send"
                android:textColor="@color/first_page_button_foreground" />

            <LinearLayout
                android:id="@+id/forget_password_container_outer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/forget_password_container_inner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/pages_top_to_top_margin"
                        android:text="@string/forget_password_code" />

                    <EditText
                        android:id="@+id/forget_password_et_code"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edit_text_height"
                        android:layout_marginTop="@dimen/pages_top_to_top_margin"
                        android:background="@drawable/rounded_edittext"
                        android:inputType="number"
                        android:layoutDirection="ltr" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/pages_top_to_top_margin"
                        android:text="@string/forget_password_password" />

                    <EditText
                        android:id="@+id/forget_password_et_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edit_text_height"
                        android:layout_marginTop="@dimen/pages_top_to_top_margin"
                        android:background="@drawable/rounded_edittext"
                        android:inputType="textPassword"
                        android:layoutDirection="ltr" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/pages_top_to_top_margin"
                        android:text="@string/forget_password_password_repeat" />

                    <EditText
                        android:id="@+id/forget_password_et_password_repeat"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edit_text_height"
                        android:layout_marginTop="@dimen/pages_top_to_top_margin"
                        android:background="@drawable/rounded_edittext"
                        android:inputType="textPassword"
                        android:layoutDirection="ltr" />

                    <Button
                        android:id="@+id/forget_password_b_reset"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/pages_top_to_top_margin"
                        android:background="@drawable/rounded_buttons"
                        android:text="@string/forget_password_reset"
                        android:textColor="@color/first_page_button_foreground" />
                </LinearLayout>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/pages_top_to_top_margin" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>